--- a/chat/2/package.json
+++ b/chat/2/package.json
@@ -6,7 +6,9 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "conf": "^0.11.2",
+    "ejs": "*",
     "express": "3.3.8",
-    "ejs": "*"
+    "winston": "^2.2.0"
   }
 }
